@@ -96,11 +96,12 @@ static post_element_t **pplugin_parse_and_load(int plugin_type, const char *pcha
   *post_elements_num = 0;
   
   if(pchain && strlen(pchain)) {
-    char *p;
+    char *p, *post_chain, *ppost_chain;
     
-    char *post_chain = strdup(pchain);
+    post_chain = strdup(pchain);
     
-    while((p = xine_strsep(&post_chain, ";"))) {
+    ppost_chain = post_chain;
+    while((p = xine_strsep(&ppost_chain, ";"))) {
       
       if(p && strlen(p)) {
 	char          *plugin, *args = NULL;
